14-kubecloud-04-update-K8S/depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netology
  labels:
    app: netology
spec:
  replicas: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 4
  selector:
    matchLabels:
      app: netology
  template:
    metadata:
      labels:
        app: netology
    spec:
      containers:
      - name: nginx
        image: nginx:1.19
        ports:
        - containerPort: 80
